--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
-version: 2.1
-
-executors:
-  node-lts-executor:
-    docker:
-      - image: circleci/node:10.16.3
-    working_directory: /repo
-
+version: 2
 jobs:
   build:
-    executor: node-lts-executor
+    branches:
+      ignore:
+        - /feature-.*/
+    docker:
+      - image: circleci/node:10.16.3
+
+    working_directory: ~/repo
+
     steps:
       - checkout
 
@@ -24,23 +24,4 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - persist_to_workspace:
-          root: /repo
-
-  test:
-    executor: my-executor
-    steps:
-      - attach_workspace:
-          at: /repo
-
       - run: yarn test:unit
-
-workflows:
-  version: 2
-
-  build-test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
