--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ jobs:
   build:
     branches:
       ignore:
-        - /feature-.*/
+        - /feature\/.*/
+
     docker:
       - image: circleci/node:10.16.3
 
