--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@ node_modules/
 dist-*.tgz
 .idea
 .env
+.eslintcache
+yarn-error.log
 test-results/
 coverage/
+public/stylesheets/*.css
+public/stylesheets/*.css.map
 build-info.json
+integration-tests/videos/
+integration-tests/integration/examples/
+integration-tests/screenshots/
