--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-            - ~/.cache
+            - /home/circleci/.cache/Cypress
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Record the Application Version
@@ -86,11 +86,7 @@ jobs:
             yarn record-build-info
       - persist_to_workspace:
           root: ~/app
-          paths:
-            - node_modules
-            - build-info.json
-            - .cache/Cypress
-            - .
+          paths: .
 
   test:
     executor: builder
@@ -112,8 +108,6 @@ jobs:
     executor: builder
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/app
       - restore_cache:
           keys:
             - dependency-cache-{{ checksum "package.json" }}
