--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ coverage/
 public/stylesheets/*.css
 public/stylesheets/*.css.map
 build-info.json
+cypress/
 integration-tests/videos/
 integration-tests/integration/examples/
 integration-tests/screenshots/
