--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
+            - ~/.cache
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Record the Application Version
@@ -92,9 +93,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - dependency-cache-{{ checksum "package.json" }}
-            - dependency-cache-
+          key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: Unit tests
           command: yarn test:unit
@@ -103,17 +102,15 @@ jobs:
       - store_artifacts:
           path: coverage
 
-  bdd_test:
+  integration_test:
     executor: builder
     steps:
       - checkout
       - restore_cache:
-          keys:
-            - dependency-cache-{{ checksum "package.json" }}
-            - dependency-cache-
-      - run:
-          name: Install Cypress
-          command: ./node_modules/.bin/cypress install
+          key: dependency-cache-{{ checksum "package.json" }}
+#      - run:
+#          name: Install Cypress
+#          command: ./node_modules/.bin/cypress install
       - run:
           name: Run the app
           command: yarn start
@@ -187,12 +184,12 @@ workflows:
       - test:
           requires:
             - build
-      - bdd_test:
+      - integration_test:
           requires:
             - test
       - build_docker:
           requires:
-            - bdd_test
+            - integration_test
           filters:
             branches:
               only: master
