--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
           key: dependencies-cache-{{ checksum "package.json" }}
       - run:
           name: Unit tests
-          command: yarn test:unit
+          command: yarn unit-test
       - store_test_results:
           path: test-results
       - store_artifacts:
@@ -105,6 +105,7 @@ jobs:
 
   integration_test:
     executor: builder
+    parallelism: 4
     steps:
       - checkout
       - attach_workspace:
@@ -118,9 +119,6 @@ jobs:
       - run:
           name: Wait for node app to start
           command: sleep 5
-#      - run:
-#          name: Install Cypress
-#          command: ./node_modules/.bin/cypress install
       - run:
           name: Run integration tests
           command: yarn int-test
