--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   "scripts": {
     "cypress:open": "cypress open",
     "int-test:ui": "cypress run --headed --browser chrome --spec 'integration-tests/**/*.feature'",
-    "int-test": "cypress run --spec 'integration-tests/**/*.feature'",
+    "int-test": "cypress run --spec 'integration-tests/**/*.feature' --record --group Linux/Electron --parallel",
     "record-build-info": "node ./bin/build-info",
     "start": "node ./bin/www",
-    "test:unit": "NODE_ENV=test yarn jest --ci --reporters=default --reporters=jest-junit --collect-coverage",
-    "test:bdd": "NODE_ENV=test yarn cucumber-js --fail-fast"
+    "unit-test": "NODE_ENV=test yarn jest --ci --reporters=default --reporters=jest-junit --collect-coverage"
   },
   "jest": {
     "testEnvironment": "node",
