--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "prepare-a-case",
   "version": "0.0.1",
+  "description": "A service to allow probation staff to prepare court cases",
   "author": "MoJ D&T Probation in Court <probation-in-court-team@digital.justice.gov.uk>",
   "license": "MIT",
   "private": true,
   "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ministryofjustice/prepare-a-case.git"
+  },
+  "engines": {
+    "node": ">=12.13.0 <13.0.0",
+    "yarn": "^1.19.0"
+  },
   "scripts": {
     "delete:reports": "rm ./test-results/cypress/* || true",
     "preint-test": "yarn delete:reports",
     "preint-test:dev": "yarn delete:reports",
     "int-test": "cypress run",
-    "int-test:dev": "cypress run --headed --browser chrome",
+    "int-test:ui": "cypress open",
+    "lint": "standard",
     "record-build-info": "node ./bin/build-info",
     "start": "node ./bin/www",
     "unit-test": "NODE_ENV=test yarn jest --ci --reporters=default --reporters=jest-junit --collect-coverage"
+  },
+  "standard": {
+    "ignore": [
+      "/integration-tests/config",
+      "/integration-tests/plugins",
+      "/integration-tests/support"
+    ]
   },
   "jest": {
     "testEnvironment": "node",
@@ -55,6 +72,7 @@
     "jest": "24.9.0",
     "jest-junit": "9.0.0",
     "node-sass-middleware": "0.11.0",
+    "standard": "14.3.1",
     "supertest": "4.0.2"
   }
 }
