--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -17,6 +17,9 @@ ingress:
       cert_secret: prepare-a-case-cert
   path: /
 
+env:
+  COURT_CASE_SERVICE_URL: http://court-case-service-dev.apps.live-1.cloud-platform.service.justice.gov.uk
+
 whitelist:
   office: "217.33.148.210/32"
   health-kick: "35.177.252.195/32"
