--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yarn": "^1.19.0"
   },
   "scripts": {
+    "precommit": "yarn lint && yarn unit-test && yarn int-test",
     "delete:reports": "rm ./test-results/cypress/* || true",
     "preint-test": "yarn delete:reports",
     "preint-test:dev": "yarn delete:reports",
@@ -65,8 +66,8 @@
   },
   "devDependencies": {
     "axe-core": "3.4.0",
-    "cucumber": "6.0.3",
-    "cypress": "3.5.0",
+    "cucumber": "6.0.4",
+    "cypress": "3.6.1",
     "cypress-axe": "0.5.1",
     "cypress-cucumber-preprocessor": "1.16.2",
     "jest": "24.9.0",
