--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "standard",
     "record-build-info": "node ./bin/build-info",
     "start": "node ./bin/www",
+    "start:watch": "nodemon --exec npm start --scripts-prepend-node-path",
     "unit-test": "NODE_ENV=test yarn jest --ci --reporters=default --reporters=jest-junit --collect-coverage"
   },
   "nodemonConfig": {
@@ -31,7 +32,7 @@
       "tests/*",
       "coverage/*"
     ],
-    "delay": 2500
+    "delay": 1000
   },
   "standard": {
     "ignore": [
@@ -83,7 +84,7 @@
     "jest-junit": "10.0.0",
     "moxios": "0.4.0",
     "node-sass-middleware": "0.11.0",
-    "nodemon": "2.0.2",
+    "nodemon": "^2.0.2",
     "standard": "14.3.1",
     "supertest": "4.0.2"
   }
