PIC-205: - Update styles for last updated on case list - Fix BDD tests so they pass - Exclude integration tests from watched directories

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "nodemonConfig": {
     "ignore": [
       "tests/*",
-      "coverage/*"
+      "coverage/*",
+      "integration-tests/*"
     ],
     "delay": 1000
   },
