Added CASES_PER_PAGE env var to deployment
Signed-off-by: Paul Massey <paul.massey@scriptwerx.io>

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -19,6 +19,7 @@ ingress:
 
 env:
   COURT_CASE_SERVICE_URL: http://court-case-service-dev.apps.live-1.cloud-platform.service.justice.gov.uk
+  CASES_PER_PAGE: 20
 
 whitelist:
   office: "217.33.148.210/32"
