--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "jest-junit": "10.0.0",
     "moxios": "0.4.0",
     "node-sass-middleware": "0.11.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "2.0.2",
     "standard": "14.3.1",
     "supertest": "4.0.2"
   }
