Update CircleCi config to relax int-test requirement before dev deployment
Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,10 +197,10 @@ workflows:
             - build
       - integration_test:
           requires:
-            - test
+            - build
       - build_docker:
           requires:
-            - integration_test
+            - test
           filters:
             branches:
               only: master
