--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "moxios": "0.4.0",
     "node-sass-middleware": "0.11.0",
     "nodemon": "2.0.2",
+    "redis-mock": "0.49.0",
     "standard": "14.3.1",
     "supertest": "4.0.2"
   }
