--- a/package.json
+++ b/package.json
@@ -75,14 +75,15 @@
     "debug": "4.1.1",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "govuk-frontend": "3.5.0",
+    "govuk-frontend": "3.6.0",
     "memorystore": "1.6.2",
     "moment": "2.24.0",
+    "moment-precise-range-plugin": "1.3.0",
     "morgan": "1.9.1",
     "nunjucks": "3.2.0"
   },
   "devDependencies": {
-    "axe-core": "3.5.1",
+    "axe-core": "3.5.2",
     "cucumber": "6.0.5",
     "cypress": "4.1.0",
     "cypress-axe": "0.5.3",
