--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,13 +55,6 @@ executors:
     docker:
       - image: circleci/node:12.16.1-browsers
     working_directory: ~/app
-  integration-tests:
-    docker:
-      - image: circleci/node:12.16.1-browsers
-      - image: bitnami/redis:5.0
-        environment:
-          ALLOW_EMPTY_PASSWORD=yes
-    working_directory: ~/app
 
 orbs:
   kubernetes: circleci/kubernetes@0.3.0
@@ -126,7 +119,7 @@ jobs:
           path: coverage
 
   integration_test:
-    executor: integration-tests
+    executor: builder
     steps:
       - checkout
       - attach_workspace:
