Broken out all local defendant data and updated BDD tests
Refactored BDD tests to include all tests per defendant
Updated dependencies
Untracked .java-version and added to .gitignore

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/package.json
+++ b/package.json
@@ -78,16 +78,16 @@
     "govuk-frontend": "3.6.0",
     "memorystore": "1.6.2",
     "moment": "2.24.0",
-    "morgan": "1.9.1",
+    "morgan": "1.10.0",
     "nunjucks": "3.2.1"
   },
   "devDependencies": {
-    "axe-core": "3.5.2",
     "cucumber": "6.0.5",
-    "cypress": "4.2.0",
-    "cypress-axe": "0.5.3",
-    "cypress-cucumber-preprocessor": "2.0.1",
-    "jest": "25.1.0",
+    "cypress": "4.3.0",
+    "cypress-axe": "0.8.1",
+    "cypress-cucumber-preprocessor": "2.2.0",
+    "cypress-intellij-reporter": "^0.0.4",
+    "jest": "25.2.7",
     "jest-junit": "10.0.0",
     "moxios": "0.4.0",
     "node-sass-middleware": "0.11.0",
