--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=12.13.0 <13.0.0",
+    "node": ">=12.13.0 <13.0.0 || >=14.0.0",
     "yarn": "^1.19.0"
   },
   "scripts": {
